2010-08-31  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/include/yarp/os/Run.h: make sendToServer
	public (Anne van Rossum has established a use-case for it).

2010-08-30  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpDescribe.cmake, conf/YarpVersion.cmake: bring back 
	sonames (thanks Anne van Rossum)

2010-08-27  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/carriers/tcpros_carrier/CMakeLists.txt: make tcpros_carrier's
	dependency on wire_rep_utils explicit, to fix static library
	build (thanks Giorgio Metta).

	* example/yayarpview: add copyright/license for Renaud Detry's code.

2010-08-26  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/src/Carriers.cpp, Network.cpp: make a fix that
	may help with bug #615420 of MORSE (thanks for reporting from
	Gilberto Echeverria, Arnaud Degroote, Breno Carneiro Pinheiro).
	The Blender game engine initializes/finalizes python modules in an
	odd way.

	* src/libYARP_OS/CMakeLists.txt: (and many other files) 
	added code to respect LIB_SUFFIX setting, so on 64-bit
	systems libraries can be installed directly to lib64
	(thanks Anne van Rossum)

2010-08-25  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Network.cpp: clean up global name client
	object, and temporary carrier objects in metaConnect (thanks 
	Vadim Tikhanoff for catching these!).

2010-08-24  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* scripts: clean up directory, in preparation for a release
	with full copyright/license info (thanks Anne van Rossum for
	prompting this).

2010-08-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Election.cpp: fix a race condition in
	multicast channel allocation (thanks Vadim Tikhanoff and
	Francesco Rea).

2010-08-24  Marco Randazzo  <marco.randazzo@iit.it>
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	fixed a bug related to methods getImpedanceOffset() setImpedanceOffset()
	