@@ -8,7 +8,7 @@
 set_property(GLOBAL PROPERTY YARP_TREE_INCLUDE_DIRS 
   ${CMAKE_BINARY_DIR}/generated_include)
 
-foreach(conf version system options)
+foreach(conf version system options api)
   set(outconf ${CMAKE_BINARY_DIR}/generated_include/yarp/conf/${conf}.h)
   configure_file(${CMAKE_SOURCE_DIR}/conf/template/yarp_config_${conf}.h.in
                  ${outconf} IMMEDIATE)
