@@ -65,6 +65,7 @@ endif (WIN32)
 
 if(CREATE_SHARED_LIBRARY)
 	set(BUILD_SHARED_LIBS ON)
+	set(YARP_DLL ON)
 endif(CREATE_SHARED_LIBRARY)
 
 
