@@ -1,5 +1,8 @@
 2010-08-31  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
+	* conf/template/yarp_config_api.h.in: preparation for
+	explicitly tagging public API.
+
 	* src/libYARP_OS/include/yarp/os/Run.h: make sendToServer
 	public (Anne van Rossum has established a use-case for it).
 
